# engine

./: .gitignore  LICENSE  README.md  SECURITY.md  WEBLOOM.md  WEBLOOM_SPEC.md  auto_record.py  launch.ps1  manifest.json  mcpize.yaml  publish-release.py  pyproject.toml  recording.py  requirements.txt  seed_sites.txt  seed_thread_generator.py  server.json  server.py  server.py.with_stage0  server_fastmcp.py  sessions.example.json  sessions.json  smoke_test.py  thread-schema.json  webloom_marketplace.py
sandboxes/: WEAVER.md  d2d_preflight.py  kdp_d2d_drift_probe.py  kdp_preflight.py  reddit_accounts.example.json  reddit_campaigns.example.json  reddit_karma_worker.py  reddit_poster.py  reddit_sandbox.py  upwork_sandbox.py  weaver.py  workana_sandbox.py
sandboxes/recipes/: example_upwork_title.json
webloom_sdk/: README.md  __init__.py  client.py
